# INF2004_Team6

./: README.md
driver/encoder/: wheel_encoder.c
driver/irline/Barcode/: CMakeLists.txt  barcode.c  barcode.h  main.c
driver/irline/Line/: CMakeLists.txt  ir_sensor.c  ir_sensor.h  irsensor.c  irsensor.h  main.c
driver/magnometer/: magnometer.c  magnometer.h
driver/motor/: motor.c
driver/ultrasonic/: CMakeLists.txt  main.c  ultrasonic.c  ultrasonic.h  ultrasonic_sensor.c  ultrasonic_sensor.h
driver/wifi/: htmldata.c  main.c  ssi.h
driver/wifi/html_files/: index.shtml
integrated_car/: CMakeLists.txt  FreeRTOSConfig.h  README.md  cgi.h  htmldata.c  interrupt.h  lwipopts.h  main.c  makefsdata.py  ssi.h  variable.h
integrated_car/driver/encoder/: wheel_encoder.h
integrated_car/driver/irline/Barcode/: CMakeLists.txt  README.md  barcode.h  main.c
integrated_car/driver/irline/Barcode/BarcodeBackup/: CMakeLists.txt  barcode2.c  barcode2.h  main.c
integrated_car/driver/irline/Line/: irsensor.h  main.c
integrated_car/driver/magnometer/: magnometer.h
integrated_car/driver/motor/: motor.h
integrated_car/driver/ultrasonic/: CMakeLists.txt  main.c  ultrasonic.h
integrated_car/driver/wifi/: cgi.h  htmldata.c  main.c  ssi.h
integrated_car/driver/wifi/html_files/: index.shtml
integrated_car/html_files/: index.shtml
